# insurease

./: .gitignore  README.md  package-lock.json  package.json  taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  README.md  compare_query.py  main.py  pyproject.toml  pytest.ini
backend/app/: compare_query.py  information_query.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chatbot.py  insurance.py  policy.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: db.py
backend/app/models/: chatbot.py  insurance.py  user.py
backend/app/services/: chatbot_service.py  insurance_service.py  policy_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test__integration_db.py
backend/app/tests/reports/integration/: report.html
backend/app/tests/reports/unit/: report.html
backend/app/tests/unit/: test_chatbot_service.py  test_deps.py  test_insurance_service.py  test_policy_service.py  test_security.py  test_user_service.py
frontend/: .npmrc  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  test-report.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: App.tsx  Login.tsx  Nav.tsx  Register.tsx  UpdateUser.tsx  admin_policies.tsx  admin_users.tsx  gpt.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/interfaces/: interfaces.ts
frontend/src/tests/: useAuth.test.ts
frontend/src/utils/: msg.tsx
